Move man/ChangeLog to man/po/ChangeLog
Shuffle contents between man/ChangeLog and the main ChangeLog,
where they belong. Fix pointers to the po/ChangeLog dirs in
README.translators.

--- a/man/po/ChangeLog
+++ b/man/po/ChangeLog
@@ -3,33 +3,6 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2008-06-27  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-query.1: Document the origin of the various fields
-	and warn that they are not always available.
-
-2008-06-22  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-buildpackage.1: Document -A option.
-	* dpkg.1, dpkg-query.1: Document the fact that the available file
-	is mostly useful for dselect users and that the related commands
-	are useless for APT users.
-
-2008-05-31  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg.1: Use the term conffile for a configuration file handled
-	by dpkg. Drop reference to hamm. Updated description of values
-	supported by -D to include those which are trigger related.
-
-2008-05-11  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Properly escape hyphen in -i option.
-
-2008-05-05  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Improve explanation of -i when used with
-	VCS-based source packages.
-
 2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* po/pl.add: Update.
@@ -49,24 +22,24 @@
 
 2008-06-03  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* Regenerated all po(t) files, including updating the German one.
-	* Add Sven in de.add, he translated some paragraphs as well.
-	* Take translation fix from Frank Lichtenheld <djpig@debian.org>
-	from the trunk.
+	* po/dpkg-man.pot: Regenerated
+	* po/*.po: Merged with dpkg-man.pot.
+	* po/de.add: Add Sven, he translated some paragraphs as well.
+	* po/de.po: Updated. Take translation fix from Frank Lichtenheld
+	from the master.
 
 2008-05-27  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1600t.
 
-2008-05-26  Helge Kreutzmann  <debian@helgefjell.de>
-
-	* dselect.1: Fixed a typo and regenerated all po(t) files, including
-	updating the German one.
-
 2008-05-25  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1591t0f9u and further fixes found/FIXMEs
 	removed.
+
+2008-05-23  Raphael Hertzog  <hertzog@debian.org>
+
+	* man/po/*.po: Fix all the filenames to avoid fuzzying translations.
 
 2008-05-22  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -89,13 +62,8 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2008-05-13  Sven Joachim  <svenjoac@gmx.de>
-
-	* dpkg.1: Document triggers --debug values.
-
 2008-05-13  Guillem Jover  <guillem@debian.org>
 
-	* deb-version.5: Change '©' to '(C)'.
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot and unfuzzy translations.
 
@@ -149,11 +117,6 @@
 
 2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* dpkg-shlibdeps.1: Fix a typo
-	* dpkg-source.1: Improve a sentence (with agreement from Raphäel)
-
-2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
-
 	* po/de.po: Updated to 1580t0f20u.
 
 2008-04-11  Helge Kreutzmann  <debian@helgefjell.de>
@@ -169,11 +132,6 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2008-04-09  Helge Kreutzmann  <debian@helgefjell.de>
-
-	* deb-triggers.5: Fix typos.
-	* pkg-trigger.1: Likewise.
-
 2008-04-08  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1523t1f74u.
@@ -185,62 +143,28 @@
 
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
-	* dpkg.1: Document new trigger statuses, and new --triggers-only,
-	--no-triggers and --triggers options.
-	* deb-triggers.5: New file.
-	* dpkg-trigger.1: Likewise.
 	* po/po4a.cfg: Add 'deb-triggers.5' and 'dpkg-trigger.1'.
-	* Makefile.am (dist_man_MANS): Likewise.
 
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* po/sv.po: Add missing terminating '>'.
 
-2008-04-08  Guillem Jover  <guillem@debian.org>
-
-	* dpkg.1: Sort package states.
-
 2008-04-07  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1494t1f59u.
 
-2008-02-26  Peter Karlsson  <peterk@debian.org>
+2008-04-03  Peter Karlsson  <peterk@debian.org>
 
-	* dpkg-source.1: Corrected English.
 	* po/sv.po: Updated to 1555t.
 
 2008-04-01  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1484t1f69u.
 
-2008-03-30  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Make it clear that Format: 2.0 is not really
-	meant to be widely used by moving all the explanations in the
-	section describing the format "3.0 (quilt)".
-
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2008-03-28  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Move a paragraph at its right place and some
-	other presentation fixes.
-
-2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
-
-	* dpkg.1: Document improved status-fd output.
-
-2008-03-14  Guillem Jover  <guillem@debian.org>
-
-	Fix errors spotted by Helge Kreutzmann.
-
-	* dpkg-buildpackage.1: Refer to 'Debian' not 'debian'. Remove a space
-	beofre a comma. Replace FFLAGS with CFLAGS when referring to usage
-	similar to C for Fortran. Do not make bold a terminating parenthesis.
-	* dpkg-checkbuilddeps.1: Mark 'debian/contorl' file with italics.
 
 2008-03-11  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -252,10 +176,11 @@
 
 2008-03-09  Robert Luberda  <robert@debian.org>
 
-	* pl.po: Updated to 1356t13f93u.
-	* pl.po: Consistently use Polish quotation marks in translations.
-	* de.po, hu.po, sv.po: Fix a few broken messages, that caused the
-	newest po4a to die with the `Unknown '<' or '>' sequence' error.
+	* po/pl.po: Updated to 1356t13f93u. Consistently use Polish quotation
+	marks in translations.
+	* po/de.po, po/hu.po, po/sv.po: Fix a few broken messages, that
+	caused the newest po4a to die with the `Unknown '<' or '>' sequence'
+	error.
 
 2008-02-26  Peter Karlsson  <peterk@debian.org>
 
@@ -263,47 +188,17 @@
 
 2008-02-24  Robert Luberda  <robert@debian.org>
 
-	* pl.po: Recoded to UTF-8.
-	* pl.po: Updated to 1344t13f103u.
-
-2008-02-22  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-gensymbols.1: Fix some groff errors detected by lintian.
-	* dpkg-query.1: Same.
+	* po/pl.po: Recoded to UTF-8. Updated to 1344t13f103u.
 
 2008-02-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* po/po4a.cfg: Add deb-symbols.5 in the list of manual pages to
 	translate.
-	* deb-symbols.5, dpkg-architecture.1, dpkg-shlibdeps.1,
-	start-stop-daemon.8: Espace some hyphens so that they do
-	not end up as minus sign.
-
-2008-02-19  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-source.1: Fix documentation of
-	-sk and -sp. The directory with the
-	unpacked original source will be removed,
-	not the tarball.
 
 2008-02-17  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-architecture.1: Document the files
-	needed by dpkg-architecture.
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2008-02-17  Frank Lichtenheld  <djpig@debian.org>
-	    Matthias Klose  <doko@cs.tu-berlin.de>
-
-	* man/dpkg-buildpackage.1: Document the new
-	behaviour for build related environment variables.
-
-2008-02-17  Zack Weinberg  <zackw@panix.com>
-
-	* deb-shlibs.5: Make this manual page a bit
-	more elaborate and helpful.
 
 2008-01-22  Peter Karlsson  <peterk@debian.org>
 
@@ -311,7 +206,6 @@
 
 2008-01-22  Raphael Hertzog  <hertzog@debian.org>
 
-	* dpkg-parsechangelog.1: Fix typos reported by Helge Kreutzmann.
 	* po/*.po: Update all translations accordingly.
 
 2008-01-22  Helge Kreutzmann  <debian@helgefjell.de>
@@ -323,46 +217,22 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2008-01-17  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Fix default value of -T parameter.
-
-2008-01-13  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-parsechangelog.1: Document the new
-	command line options.
-
 2008-01-12  Raphael Hertzog  <hertzog@debian.org>
 
-	* dpkg-shlibdeps.1: Fix a typo reported by Helge Kreutzmann.
-	* po/*.po: Likewise to avoid fuzzy strings.
+	* po/*.po: Fix a typo to avoid fuzzy strings.
 
 2008-01-12  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1352t0f34u.
 
-2008-01-10  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-source.1: Explain better the first parameter of the -b option.
-
 2008-01-10  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Fix typo
+	* po/fr.po: Fix typo
 
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2008-01-06  Raphael Hertzog  <hertzog@debian.org>
-
-	* deb-control.5: Explain better the ordering of call of
-	postinst/prerm during installations and removal between a package
-	and its dependencies.
-
-2008-01-03  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-buildpackage.1: Document new -j behaviour.
 
 2008-01-02  Christian Perrier  <bubulle@debian.org>
 
@@ -372,11 +242,6 @@
 
 	* po/*.po: Fix typos in translations as well to avoid fuzzy
 	strings.
-
-2007-12-30  A. Costa  <agcosta@gis.net>
-
-	* dpkg-gensymbols.1, dpkg-shlibdeps.1: Fix some typos.
-	* dpkg-source.1, deb-symbols.5: Likewise.
 
 2007-12-29  Guillem Jover  <guillem@debian.org>
 
@@ -390,20 +255,6 @@
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2007-12-24  Guillem Jover  <guillem@debian.org>
-
-	* Makefile.am (all-local): Rename to ...
-	(all-local-yes): ... this.
-	(clean-local): Rename to ...
-	(clean-local-yes): ... this.
-	(install-data-local): Rename to ...
-	(install-data-local-yes): ... this.
-	(uninstall-local): Rename to ...
-	(uninstall-local-yes): ... this.
-	(all-local, all-local-no, clean-local, clean-local-no): New targets.
-	(install-data-local, install-data-local-no): Likewise.
-	(uninstall-local, uninstall-local-no): Likewise.
 
 2007-12-22  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -421,18 +272,6 @@
 
 	* po/de.po: Updated to 1335t0f48u.
 
-2007-12-09  Raphael Hertzog  <hertzog@debian.org>
-
-	* deb-symbols.5: Describe syntax of meta-information
-	fields and document the Build-Depends-Package field.
-	* dpkg-shlibdeps.1: Describe how the Build-Depends-Package field
-	of symbols file is used.
-
-2007-12-09  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-gensymbols.1: Remove the restriction that included files
-	must be valid symbol files on their own.
-
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
 	* po/po4a.cfg: Add deb-version.5.
@@ -446,27 +285,10 @@
 
 	* po/sv.po: Updated to 1354t.
 
-2007-11-29  Frank Lichtenheld  <djpig@debian.org>
-
-	* deb-control.5: Move description of
-	version format to...
-	* deb-version.5: Take the section from
-	policy describing version format and
-	sorting since this is probably as good
-	as it gets for describing these.
-
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2007-11-24  Raphael Hertzog  <hertzog@debian.org>
-
-	* dpkg-gensymbols.1: Document the new -I<file> option.
-
-2007-11-22  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-name.1: Document that the Package-Type field is now supported.
 
 2007-11-02  Peter Karlsson  <peterk@debian.org>
 
@@ -480,19 +302,6 @@
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2007-11-19  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-architecture.1: Remove unneeded formatting surrounding '-c' in
-	example command, as a side effect get rid of an undefined macro.
-	* dpkg-checkbuilddeps.1: Remove usage of .UR macro, which was
-	undefined anyway.
-	* dpkg-statoverride.8: Likewise.
-	* dpkg-query.1: Likewise. Remove .T macro cruft.
-
-2007-11-19  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-scanpackages.1: Document --type, and mark --udeb as obsolete.
 
 2007-11-04  Robert Luberda  <robert@debian.org>
 
@@ -517,12 +326,6 @@
 	* po/*.po: Merged with dpkg-man.pot.
 	* po/sv.po: Updated to 1345t0f0u.
 
-2007-10-29  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-query.1: Replace ' with \(aq in example.
-	Reported by Daniel van Eeden <daniel_e -at- dds nl>
-	* dpkg-source.1: Replace ' with \(aq in synopsis.
-
 2007-10-26  Peter Karlsson  <peterk@softwolves.pp.se>
 
 	* po/sv.po: Updated to 1343t0f0u.
@@ -540,14 +343,6 @@
 	* po/de.po: Updated to 1280t0f63u, add lots of fixes from
 	Frank Lichtenheld, thanks!
 
-2007-10-12  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg.1 (AUTHORS): Remove some unneccessary markup.
-	Allows reuse of one more msgid.
-
-	* Makefile.am (update-po): New target to easily
-	update the .pot and .po files. Uses po4a --force.
-
 2007-10-11  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1279t0f64u.
@@ -557,80 +352,26 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2007-10-09  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-source.1: -W is the default for quite
-	some time already. Adapt the description of
-	-W and -E.
-	* dpkg-buildpackage.1: likewise.
-
-	* dpkg-source.1: Change the rest of the
-	man page to not contain any hardcoded
-	.gz references.
-
-	* dpkg-buildpackage.1: Document all
-	options only passed to dpkg-source.
-	-s[nsAkurKUR], -z, and -Z were missing.
-
-	* dpkg-source.1: Document -Z and -z.
-
 2007-10-08  Robert Luberda  <robert@debian.org>
 
 	* po/pl.po: Update to 1183t19f101u.
 
 2007-10-08  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Updated to 1249t0f54u.
-	* Removed the FIXMEs left in de.po by accident
+	* po/de.po: Updated to 1249t0f54u. Remove the FIXMEs left by accident.
 
 2007-10-08  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2007-10-08  Guillem Jover  <guillem@debian.org>
-
-	* deb-control.5: Document Origin and Bugs fields.
-
-2007-10-07  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-buildpackage.1: Document that fakeroot is now the default
-	value in case -r is not specified.
-
 2007-10-07  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1238t0f52u.
 
-2007-09-30  Frank Lichtenheld  <djpig@debian.org>
-
-	* deb-control.5: Remove obsolete sentence regarding
-	the role of the Priority and Section field. They
-	have nothing to do with the archive layout since
-	woody.
-
-	* dpkg-source.1: Remove superfluous [options] from
-	-b command description.
-
 2007-09-28  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1290t.
-
-2007-09-24  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-source.1: Rework documentation of -i
-	and -I options to give clearer explanations and
-	explain the differences between the two in syntax
-	and semantics.
-
-2007-09-24  Jari Aalto  <jari.aalto@cante.net>
-
-	* dpkg-source.1: Document new behaviour
-	of -I option.
-
-2007-09-23  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg-buildpackage.1: Document the new -j
-	option.
 
 2007-09-23  Peter Karlsson  <peterk@debian.org>
 
@@ -645,21 +386,6 @@
 
 	* po/de.po: Updated to 1254t135u.
 
-2007-09-08  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-scanpackages.1: Document that gzipped files are also used by
-	apt.
-
-2007-09-08  A. Costa  <agcosta@gis.net>
-
-	* dpkg-deb.1: Fix typo ('seperated' -> 'separated').
-	* start-stop-daemon.8: Fix typo ('themself' -> 'themselves').
-
-2007-09-06  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-scanpackages.1: Replace gzip with bzip2 as the requirement for
-	compressed Packages files for apt.
-
 2007-09-05  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1289t.
@@ -669,19 +395,9 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2007-08-31  Guillem Jover  <guillem@debian.org>
-
-	* deb-control.5: Document Tag field.
-	* dpkg-query.1: Document Tag as a recognized field.
-
 2007-08-25  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1285t.
-
-2007-08-20  Guillem Jover  <guillem@debian.org>
-
-	* deb-control.5: Document Homepage field.
-	* dpkg-query.1: Document Homepage as a recognized field.
 
 2007-08-18  Guillem Jover  <guillem@debian.org>
 
@@ -709,62 +425,9 @@
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
 
-2007-07-18  Guillem Jover  <guillem@debian.org>
-
-	* cleanup-info.8: Unify author and copyright information formatting.
-	* deb-substvars.5: Likewise.
-	* dpkg-checkbuilddeps.1: Likewise.
-	* dpkg-deb.1: Likewise.
-	* dpkg-divert.8: Likewise.
-	* dpkg-name.1: Likewise.
-	* dpkg-query.1: Likewise.
-	* dpkg-split.1: Likewise.
-	* dpkg-statoverride.8: Likewise.
-	* install-info.8: Likewise.
-	* update-alternatives.8: Likewise.
-
-2007-07-18  Guillem Jover  <guillem@debian.org>
-
-	* dpkg.1: Split independent options.
-	* dpkg-buildpackage.1: Likewise.
-	* dpkg-genchanges.1: Likewise.
-	* dpkg-source.1: Likewise.
-
-2007-07-18  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-buildpackage.1: Remove ', and' leftover from man page split.
-	Substitute 'FILES' with 'SEE ALSO'.
-
-2007-07-18  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-deb.1: Remove space before ellipsis in parameters.
-	* dpkg-query.1: Likewise.
-	* update-alternatives.8: Likewise.
-	* dpkg.1: Likewise. Use commas instead if pipes to separate
-	alternative options. Remove redundant preceding 'dpkg' from options.
-
-2007-07-18  Guillem Jover  <guillem@debian.org>
-
-	* dpkg.1: Fix italics and bold usage.
-	* dpkg-divert.8: Likewise.
-	* dpkg-buildpackage.1: Likewise.
-
-2007-07-10  Frank Lichtenheld  <djpig@debian.org>
-
-	* dpkg.1, dpkg-query.1, dpkg-deb.1: Synchronise
-	usage information between these three man pages.
-	Also fix some formatting oddities and small
-	mistakes.
-
 2007-07-08  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1061t1f219u.
-
-2007-07-04  Frank Lichtenheld  <djpig@debian.org>
-
-	* Makefile.am (uninstall-local): New target to
-	remove the translated man pages. Detected with
-	the help of 'make distcheck'.
 
 2007-07-02  Frank Lichtenheld  <djpig@debian.org>
 
@@ -773,48 +436,7 @@
 
 2007-06-23  Joachim Breitner  <nomeata@debian.org>
 
-	* de.po: Fix typo ('wir' -> 'wird')
-
-2007-06-13  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-source.1: Remove section describing few dpkg-gncontrol options.
-
-2007-06-12  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-source.1: Fix explanation of '-b' option, remove a reference
-	to checking for a missing empty string argument, and add a reference
-	to '-sX' arguments affecting the behaviour.
-	* install-info.8: Remove an additional space. Mark gzip in bold and
-	remove redundant reference to GNU.
-
-2007-06-12  Guillem Jover  <guillem@debian.org>
-
-	* deb-substvars.5: Unify title header.
-	* dpkg.1: Likewise.
-	* dpkg-buildpackage.1: Likewise.
-	* dpkg-checkbuilddeps.1: Likewise.
-	* dpkg-deb.1: Likewise.
-	* dpkg-divert.8: Likewise.
-	* dpkg-scanpackages.1: Likewise.
-	* dpkg-scansources.1: Likewise.
-	* dpkg-shlibdeps.1: Likewise.
-	* dpkg-source.1: Likewise.
-	* dpkg-statoverride.8: Likewise.
-	* install-info.8: Likewise.
-	* update-alternatives.8: Likewise.
-
-2007-06-12  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-divert.8: Mark dpkg-* commands in bold.
-	* dpkg-buildpackage.1: Likewise.
-	* dpkg-source.1: Likewise.
-	* dpkg-statoverride.8: Likewise.
-
-2007-06-12  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-source.1: Reference deb-substvars instead of dpkg-substvars.
-	* dpkg-genchanges.1: Likewise.
-	* dpkg-gencontrol.1: Likewise.
+	* po/de.po: Fix typo ('wir' -> 'wird').
 
 2007-06-09  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -836,29 +458,6 @@
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
-
-2007-05-15  Guillem Jover  <guillem@debian.org>
-
-	* deb-control.5: Document comments in the control file.
-
-2007-05-15  Guillem Jover  <guillem@debian.org>
-
-	* install-info.8: Disambiguate the use of 'Info directory' with 'Info
-	dir file'.
-
-2007-05-15  Kurt B. Kaiser  <kbk@shore.net>
-
-	* install-info.8: Add missing commas, and information on the behaviour
-	when no '--section' option is specifyied.
-
-2007-05-12  Guillem Jover  <guillem@debian.org>
-
-	* deb-substvars.5: Fix title to match the real section.
-
-2007-05-08  Guillem Jover  <guillem@debian.org>
-
-	* Makefile.am (dist-hook): New target.
-	(EXTRA_DIST): New variable.
 
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
@@ -896,13 +495,6 @@
 	* po/add_de/dpkg-distaddfile.1.de.add: Likewise.
 	* po/de.po: Merged from master files.
 
-2007-04-11  Guillem Jover  <guillem@debian.org>
-
-	* Makefile.am (man.stamp): Use a stamp file for now until po4a
-	supports them internally.
-	(all-local): Depend on man.stamp.
-	(clean-local): Remove the man.stamp file.
-
 2007-03-26  Martin Weis  <Martin.Weis.newsadress@gmx.de>
 
 	* po/de.po: Fix typo ('Pakete' -> 'Dateien').
@@ -922,11 +514,6 @@
 
 2007-03-13  Guillem Jover  <guillem@debian.org>
 
-	* dpkg-deb.1: Move '-z' to it's own OPTIONS entry. Document '-Z',
-	and the new 'lzma' value.
-
-2007-03-13  Guillem Jover  <guillem@debian.org>
-
 	* po/add_de/dpkg-scanpackages.1.de.add: Copy to ...
 	* po/add_de/deb-override.5.de.add: ... here.
 	* po/add_es/dpkg-scanpackages.1.es.add: Copy to ...
@@ -938,20 +525,6 @@
 
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
-	* dpkg-source.1: Split individual man pages to ...
-	* deb-shlibs.5: ... here and ...
-	* deb-substvars.5: ... here and ...
-	* dpkg-buildpackage.1: ... here and ...
-	* dpkg-distaddfile.1: ... here and ...
-	* dpkg-genchanges.1: ... here and ...
-	* dpkg-gencontrol.1: ... here and ...
-	* dpkg-parsechangelog.1: ... here and ...
-	* dpkg-shlibdeps.1: ... here.
-	* Makefile.am (all-local): Do not make the symlinks anymore.
-	(dpkg_source_aliases): Move to ...
-	(dist_man_MANS): ... here.
-	(man_MANS): Remove variable.
-	(CLEANFILES): Likewise.
 	* po/po4a.cfg: Add stanzas for deb-shlibs.5, deb-substvars.5,
 	dpkg-buildpackage.1, dpkg-distaddfile.1, dpkg-genchanges.1,
 	dpkg-gencontrol.1, dpkg-parsechangelog.1 and dpkg-shlibdeps.1.
@@ -976,69 +549,7 @@
 
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
-	* Makefile.am (dist_man_MANS): Add deb-override.5.
 	* po/po4a.cfg: Add a stanza for deb-override.5.
-	* dpkg-scanpackages.1: Move override file information to ...
-	* deb-override.5: ... here.
-
-	* dpkg-scanpackages.1: Add a reference to deb-override.5.
-	* dpkg-scansources.1: Likewise.
-
-2007-03-06  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-scanpackages.1: Mark the override argument as optional.
-
-2007-03-06  Guillem Jover  <guillem@debian.org>
-
-	* update-alternatives.8: Reorder EXAMPLES section.
-
-2007-03-06  Guillem Jover  <guillem@debian.org>
-
-	* cleanup-info.8: Unify the summary.
-	Unify '--help' and '--version' descriptions.
-	Remove unneeded quotes in section names.
-	* update-alternatives.8: Likewise.
-	* start-stop-daemon.8: Likewise.
-	* dpkg-deb.1: Likewise.
-	* dpkg-divert.8: Likewise.
-	* dpkg-query.1: Likewise.
-	* dpkg-name.1: Likewise.
-	* dpkg-checkbuilddeps.1: Likewise.
-	* dpkg-architecture.1: Likewise.
-	* dpkg-split.1: Likewise.
-	* dpkg-statoverride.8: Likewise.
-	* dpkg-scanpackages.1: Likewise.
-	* dpkg-scansources.1: Likewise.
-
-	* dpkg-deb.1: Separate option aliased names with ',' instead of '|'.
-	* dpkg-name.1: Likewise.
-	* dpkg-split.1: Likewise.
-	* dpkg-query.1: Likewise.
-	* start-stop-daemon.8: Likewise.
-
-	* dpkg-divert.8: List each options in the OPTIONS section.
-	* dpkg-scanpackages.1: Likewise.
-	* start-stop-daemon.8: Likewise.
-
-	* dpkg-divert.8: Remove redundant '<>' characters to delimit a
-	replacable argument.
-	* dpkg-statoverride.8: Likewise.
-
-	* update-alternatives.8: Mark commands in examples as bold.
-	* dpkg-architecture.1: Reorder sections. Indent examples.
-	* dpkg-name.1: Do not specify in which programming language the
-	program is written in.
-	* dpkg-deb.1: Split '--extract' and '--vextract' options.
-
-2007-02-28  Guillem Jover  <guillem@debian.org>
-
-	* dpkg-source.1: Document new option '--admindir'.
-	* dpkg-checkbuilddeps.1: Likewise.
-
-2007-01-24  Frank Lichtenheld  <djpig@debian.org>
-
-	* 822-date.1: 822-date is now deprecated. Document this fact in
-	the man page.
 
 2007-01-16  Nicolas Francois  <nicolas.francois@centraliens.net>
 
@@ -1056,24 +567,10 @@
 	po/add_pl, po/add_pt_BR, po/add_ru, po/add_sv: Move the add_<lang>
 	directories from po4a/ to po/.
 	* po4a/: Removed.
-	* C/: Move the manpages to the root of the man/ directory.
-	* C/Makefile.am, de/Makefile.am es/Makefile.am, fr/Makefile.am,
-	hu/Makefile.am, ja/Makefile.am, pl/Makefile.am, pt_BR/Makefile.am,
-	ru/Makefile.am, sv/Makefile.am, po4a.mk: The languages makefiles
-	are no more needed. Also remove the language directories.
-	* Makefile.am: New build system.
-	The goal of these changes is to simplify the build system (less
-	files, less Makefiles, lower the depth of the file hierarchy).
-
-2007-01-09  Nicolas Francois  <nicolas.francois@centraliens.net>
-
-	* C/dpkg-deb.1: Make the copyright match the one from the source.
-	* C/dpkg-split.1: Likewise.
-
-2006-11-24  Tomas Pospisek  <tpo_deb@sourcepole.ch>
-
-	* C/update-alternatives.8: Document that it requires cooperation from
-	all packages dealing with the same file.
+	* de/Makefile.am es/Makefile.am, fr/Makefile.am, hu/Makefile.am,
+	ja/Makefile.am, pl/Makefile.am, pt_BR/Makefile.am, ru/Makefile.am,
+	sv/Makefile.am: The languages makefiles are no more needed.
+	Also remove the language directories.
 
 2006-10-07  Nicolas Francois  <nicolas.francois@centraliens.net>
 
@@ -1104,7 +601,6 @@
 
 2006-09-29  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* C/dpkg-scansources.1: Fix a typo.
 	* po4a/dpkg-scansources.1/po/dpkg-scansources.1.pot: Regenerated.
 	* po4a/dpkg-scansources.1/po/*.po: Merge with pot file.
 
@@ -1216,8 +712,6 @@
 
 2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* C/dpkg-architecture.1: Remove linux-alpha from the architecture
-	wildcard examples, and fix a formatting issue.
 	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
 	* po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
 	* po4a/dpkg-architecture.1/po/fr.po: Update to 116t.
@@ -1250,8 +744,6 @@
 	translation.
 	* po4a/dpkg-architecture.1/dpkg-architecture.1.cfg: Add the `fr'
 	language.
-	* C/dpkg-source.1: Typo fix.
-	* C/dpkg-architecture.1: Likewise.
 	* po4a/dpkg-source.1/po/dpkg-source.1.pot: Regenerated.
 	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Likewise.
 	* po4a/dpkg-source.1/po/*.po: Merge with pot file.
@@ -1271,9 +763,6 @@
 
 2006-08-02  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* C/dpkg.1: Typo fix.
-	* C/dpkg-divert.8: Likewise.
-	* C/deb-control.5: Likewise.
 	* po4a/dpkg.1/po/dpkg.1.pot: Regenerated.
 	* po4a/dpkg-divert.8/po/dpkg-divert.8.pot: Likewise.
 	* po4a/deb-control.5/po/deb-control.5.pot: Likewise.
@@ -1311,8 +800,6 @@
 2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/add_fr/*.add: Fix the Debian French translation team address.
-	* C/dpkg-architecture.1: Typo fix.
-	* C/dpkg-statoverride.8: Likewise.
 	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
 	* po4a/dpkg-statoverride.8/po/dpkg-statoverride.8.pot: Likewise.
 	* po4a/dpkg-statoverride.8/po/*.po: Merge with pot file.
@@ -1337,7 +824,6 @@
 
 2006-07-29  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* C/dpkg-name.1: Typo fix.
 	* po4a/dpkg-name.1/po/dpkg-name.1.pot: Regenerated.
 	* po4a/dpkg-name.1/po/*.po: Merge with pot file.
 	Former completed translations become 39t3f.
@@ -1353,10 +839,6 @@
 	before the SEE ALSO section, not at the end.
 	* po4a/add_de/deb-old.5.de.add: Likewise.
 	* po4a/add_de/deb.5.de.add: Likewise.
-	* C/cleanup-info.8: Typo fix.
-	* C/deb.5: Likewise.
-	* C/dpkg-scanpackages.1: Likewise.
-	* C/dpkg-scansources.1: Likewise.
 	* po4a/cleanup-info.8/po/cleanup-info.8.pot: Regenerated.
 	* po4a/deb.5/po/deb.5.pot: Likewise.
 	* po4a/dpkg-scanpackages.1/po/dpkg-scanpackages.1.pot: Likewise.
@@ -1409,11 +891,9 @@
 	* po4a/deb-old.5/deb-old.5.cfg: Likewise.
 	* po4a/add_de/start-stop-daemon.8.de.add: The previous addendum
 	was empty.
-	* C/822-date.1: Fix the manpage's modification date.
 
 2006-07-23  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* C/start-stop-daemon.8: Typo fix.
 	* po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot: Regenerated.
 	* po4a/start-stop-daemon.8/po/*.po: Merge with pot file.
 
@@ -1431,8 +911,6 @@
 
 2006-07-22  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* C/start-stop-daemon.8: Typo fix.
-	* C/update-alternatives.8: Likewise.
 	* po4a/start-stop-daemon.8/po/de.po: Updated translation.
 	* po4a/update-alternatives.8/po/de.po: Likewise.
 	* po4a/dpkg.cfg.5/po/de.po: New translation.
@@ -1456,10 +934,9 @@
 	* po4a/dpkg-deb.1/po/fr.po: likewise
 	* po4a/dpkg-cfg.5/po/fr.po: New translation.
 	* po4a/add_fr/dpkg-cfg.5.fr.add: addendum.
-	
+
 2006-06-21  Guillem Jover  <guillem@debian.org>
 
-	* C/start-stop-daemon.8: Document the new '--umask' option.
 	* po4a/start-stop-daemon.8/po/start-stop-daemon.8.pot: Regenerated.
 	Former completed translations become 63t2f.
 	* po4a/start-stop-daemon.8/po/*.po: Merge with pot file.
@@ -1478,15 +955,6 @@
 	update-alternatives.8 113t2f1u
 	The paths of the references were also modified (for all files).
 	* po4a/*/po/*.po: Merged with the pot files.
-
-2006-06-17  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-architecture.1: Clarify new -e and -i options, give backward
-	compatibility information and add some examples.
-
-2006-06-16  Robert Luberda  <robert@debian.org>
-
-	* C/dpkg-deb.1: Fix typo ("--show-format" -> "--showformat").
 
 2006-06-16  Robert Luberda  <robert@debian.org>
 
@@ -1508,40 +976,11 @@
 	* hu/dpkg.cfg.5.hu.po: Updated translation.
 	* hu/dselect.cfg.5.hu.po: Updated translation.
 
-2006-05-25  Ben Pfaff  <blp@cs.stanford.edu>
-
-	* C/install-info.8: Correct default info directory for '--infodir'.
-
-2006-05-23  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-source.1: Document that the source:Upstream-Version substvar
-	can have an epoch.
-
-2006-05-23  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-source.1: Add '--help' and '--version' options.
-	* C/dpkg-architecture.1: Likewise.
-	* C/dpkg-checkbuilddeps.1: Add '-h' option.
-	* C/dpkg-divert.8: Option '--help' does not print the version anymore.
-	* C/update-alternatives.8: Likewise.
-	* C/dpkg-statoverride.8: Likewise. Add '--version' option.
-
 2006-05-21  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* */*.po, C/po/*.pot, po4a/: Ease the work of i18n robots: make a
 	directory for every manpage and move the POT and POs for a page in the
 	same directory.
-
-2006-05-18  Frank Lichtenheld  <djpig@debian.org>
-
-	* C/dpkg-query.1: Document that user defined
-	fields can also be printed with --showformat.
-
-2006-05-17  Frank Lichtenheld  <djpig@debian.org>
-
-	* C/dpkg.1: We don't actually set
-	DPKG_OLD_CONFFILE and DPKG_NEW_CONFFILE on subshells,
-	so we shouldn't claim to do so.
 
 2006-05-16  Peter Karlsson  <peterk@debian.org>
 
@@ -1581,18 +1020,6 @@
 	* C/po/*.pot: Update.
 	* */*.po: Merge with .pot files.
 
-2006-05-10  Frank Lichtenheld  <djpig@debian.org>
-
-	* C/dpkg-deb.1: Mention the --show-format option also
-	seperatly, not just in the description of --show.
-	Point the reader to the explanation of --show-format
-	in dpkg-query.1 to avoid having to duplicate it.
-
-	* C/dpkg-scanpackages.1: Add remark that apt ignores
-	uncompressed Packages files on non-local access.
-	* C/dpkg-scansources.1: Likewise (with Sources instead of
-	Packages files of course).
-
 2006-05-10  Stepan Golosunov  <stepan@golosunov.pp.ru>
 
 	* ru/dpkg.1.ru.po: Typo fix ("|<" -> "I<").
@@ -1604,33 +1031,6 @@
 	* pl/dpkg-statoverride.8.pl.po: Updated to 42t (likewise).
 	* pl/dpkg-query.1.pl.po: Updated to 58t (likewise).
 
-2006-05-04  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-divert.8: Escape hyphens used in command line.
-	* C/dpkg-architecture.1: Likewise.
-	* C/dpkg-statoverride.8: Likewise.
-
-2006-05-02  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-source.1: Rename dpkg:UpstreamVersion to
-	dpkg:Upstream-Version.
-
-2006-05-02  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg-source.1: Document new source:Version,
-	source:Upstream-Version and binary:Version substvars.
-
-2006-04-19  Nicolas Francois  <nicolas.francois@centraliens.net>
-
-	* C/install-info.8: Add a missing quote arround the date.
-	* C/dpkg-source.1: Add a reference to the Debian Policy Manual for
-	a detailed description of the shlibs format. Thanks to Russ
-	Allbery.
-
-2006-04-16  Nicolas Francois  <nicolas.francois@centraliens.net>
-
-	* C/dpkg-source.1: Document the shlibs.local format.
-
 2006-04-11  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a.mk: Add a $(po4a_translate_options) variable to allow
@@ -1640,27 +1040,6 @@
 	already encoded in KOI8-R.
 	* fr/dpkg-statoverride.8.fr.po: Fix an unmatched ">" or "<".
 	* ru/dpkg.1.ru.po: Likewise.
-
-2006-04-10  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg.1: Document the new way to replicate the package status to
-	another installation by using '--clear-selections'.
-
-2006-04-10  Andrew Suffield  <asuffield@debian.org>
-
-	* C/dpkg.1: Document the new '--clear-selections' option.
-
-2006-04-10  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg.1: Remove mention of obsolete force/refuse 'auto-select'
-	option.
-
-2006-04-09  Guillem Jover  <guillem@debian.org>
-
-	* C/dpkg.1: Document that '--get-selections' without a pattern will
-	not list packages in state purge.
-	* C/dpkg-query.1: Document that '-l' without a pattern will not list
-	packages in state purge.
 
 2006-04-08  Yuri Kozlov  <kozlov.y@gmail.com>
 
@@ -1677,71 +1056,28 @@
 	* fr/dpkg-source.1.fr.po: Typo corrected, thanks
 	to Nicolas Bonifas who spotted it.
 
-2006-03-04  Christian Perrier  <bubulle@debian.org>
-
-	* C/dpkg-architecture.1: Typos corrections.
-	* C/dpkg-checkbuilddeps.1: Likewise.
-	* C/dpkg-name.1: Likewise.
-	* C/dpkg-source.1: Likewise.
-	* C/deb-control.5: Likewise.
-
 2006-03-04  Philippe Batailler  <philippe.batailler@free.fr>
 
 	* fr/*: Applied Guillem's work to french.
 
 2006-02-28  Guillem Jover  <guillem@debian.org>
 
-	* C/dpkg.1 (SEE ALSO): Add dpkg-query(1).
-
-2006-02-28  Guillem Jover  <guillem@debian.org>
-
-	* C/822-date.1: Lower case title header. Put options in bold, files
-	and arguments to options in italic. Escape hyphens used un command
-	line. Unescape dashes. Remove spaces after full stops and after end
-	of line. Separete sections with a dot. Do not put the manpage section
-	number in bold.
-	* C/cleanup-info.8: Likewise.
-	* C/deb.5: Likewise.
-	* C/deb-control.5: Likewise.
-	* C/deb-old.5: Likewise.
-	* C/dpkg.1: Likewise.
-	* C/dpkg.cfg.5: Likewise.
-	* C/dpkg-checkbuilddeps.1: Likewise.
-	* C/dpkg-deb.1: Likewise.
-	* C/dpkg-divert.8: Likewise.
-	* C/dpkg-name.1: Likewise.
-	* C/dpkg-query.1: Likewise.
-	* C/dpkg-scanpackages.1: Likewise.
-	* C/dpkg-source.1: Likewise.
-	* C/dpkg-split.1: Likewise.
-	* C/dpkg-statoverride.8: Likewise.
-	* C/dselect.1: Likewise.
-	* C/dselect.cfg.5: Likewise.
-	* C/install-info.8: Likewise.
-	* C/start-stop-daemon.8: Likewise.
-	* C/update-alternatives.8: Likewise.
-	* C/dpkg-scansources.1: Likewise. Remove `.IX' entries.
-	* C/dpkg-architecture.1: Likewise. Split most of the body of the
-	section DESCRIPTION into OPTIONS and ACTIONS.
-
 	* C/po/*.pot: Update.
 	* */*.po: Merge with .pot files.
 
 2006-02-21  Robert Luberda  <robert@debian.org>
 
-	* pl/*: Updated.
+	* pl/*: Update.
 
 2006-02-20  Matt Kraai  <kraai@ftbfs.org>
 
-	* C/dpkg-source.1: Add missing parentheses around manpage section
-	number.
 	* C/po/dpkg-source.1.pot: Update.
 	* es/dpkg-source.1.es.po: Likewise.
 	* fr/dpkg-source.1.fr.po: Likewise.
 
 2006-02-19  Philippe Batailler  <philippe.batailler@free.fr>
 
-	* fr/dpkg-source.1.fr.po: Updated.
+	* fr/dpkg-source.1.fr.po: Update.
 	* fr/dpkg.1.fr.po: Likewise.
 	* fr/dpkg-query.1.fr.po: Likewise.
 	* fr/dpkg-name.1.fr.po: Likewise.
@@ -1752,23 +1088,36 @@
 	* */*.po: Unfuzzy strings fuzzied due to the
 	typo fixes.
 
-2006-02-18  A. Costa  <agcosta@gis.net>
-
-	* C/dpkg-deb.1: Typo fix.
-	* C/dpkg-statoverride.8: Typo fix.
-	* C/install-info.8: Typo fix.
-	* C/start-stop-daemon.8: Typo fix.
-	* C/update-alternatives.8: Typo fix.
-	* C/dpkg.1: Typo fix.
-	* C/dpkg.cfg.5: Typo fix.
-
 2006-02-17  Frank Lichtenheld  <djpig@debian.org>
 
 	* C/po/*.pot: Update.
 	* */*.po: Merge with .pot files.
 
-	* Makefile.am (updatepo): New target that calls
-	`make updatepo' in all subdirectories.
+2006-02-15  SZERVÁC Attila  <sas@321.hu>
+
+	* hu/dpkg.cfg.5.hu.po: Added.
+	* hu/dpkg.cfg.5.hu.po.addendum: Likewise.
+	* hu/dselect.cfg.5.hu.po: Likewise.
+	* hu/dselect.cfg.5.hu.po.addendum: Likewise.
+
+2006-02-11  Philippe Batailler  <philippe.batailler@free.fr>
+
+	* man/fr/dpkg.1.fr.po: Updated.
+	* man/fr/dpkg-query.1.fr.po: Likewise.
+	* man/fr/dpkg-source.1.fr.po: Likewise.
+	* man/fr/dpkg-split.1.fr.po: Likewise.
+
+2006-02-11  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* man/*/*.addendum: Use a generic position to insert the addenda,
+	which should always exist in a valid man page.
+	Translators are free to use another position.
+	* man/*/*.addenum: Renamed man/*/*.addendum.
+
+2006-02-08  Philippe Batailler  <philippe.batailler@free.fr>
+
+	* man/fr/update-alternatives.8.fr.po: Updated translation.
+	* man/fr/update-alternatives.8.fr.po.addendum: New file.
 
 
 Older changes are documented in the top-level ChangeLog
