Do not leave new conffile as .dpkg-new when it has been diverted
Also properly activate the file trigger for the diverted conffile.
Based on a patch by Timothy G Abbott. Closes: #58735, #476899

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-07-10  Guillem Jover  <guillem@debian.org>,
+            Timothy G Abbott  <tabbott@mega-man.mit.edu>
+
+	* src/configure.c (deferred_configure): Call namenodetouse to handle
+	diverted conffiles. Use trig_file_activate on usenode, instead of
+	trig_file_activate_byname, to activate the correct file trigger for
+	the diverted conffile.
+
 2008-07-06  Guillem Jover  <guillem@debian.org>
 
 	* src/main.h: Remove comment about side effect in namenodetouse.
